src/objects/FSTR__PCE_Step_Reassignment__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object holds information about reassigning steps if they haven&apos;t been accepted by someone in a defined period of time.</description>
    <fields>
        <fullName>FSTR__Interval_Unit__c</fullName>
        <inlineHelpText>The unit used to calculate the interval at which the reassignment record will be invoked from the previous reassignment or initial assignment.</inlineHelpText>
        <label>Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                    <default>true</default>
                    <label>Minutes</label>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Interval__c</fullName>
        <inlineHelpText>The interval at which the reassignment record will be invoked from the previous reassignment or initial assignment.</inlineHelpText>
        <label>Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Order__c</fullName>
        <inlineHelpText>The order in which this record will be used when multiple step reassignments are assigned to a step.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step__c</fullName>
        <inlineHelpText>The step this reassignment record applies to</inlineHelpText>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Reassignments</relationshipLabel>
        <relationshipName>PCE_Step_Reassignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Queue__c</fullName>
        <label>Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Salesforce Account Team Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCE_Step_Reassignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Step Reassignment</label>
    <nameField>
        <displayFormat>PSR-{00000}</displayFormat>
        <label>Step Reassignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Reassignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>